# BitBuffer

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
Source/: bitbuffer.c  bitbuffer.h
Test/: test.c
